--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,79 +4,124 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
+    <link rel="icon"
+          type="image/jpg"
+          href="./assets/images/favicon.jpg">
 </head>
 
 <body>
+<!-- HEADER / NAVIGATION -->
+
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    <a href="#search">Search Engine Optimization</a>
                 </li>
                 <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                    <a href="#reputation">Online Reputation Management</a>
                 </li>
                 <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                    <a href="#social">Social Media Marketing</a>
                 </li>
             </ul>
         </div>
     </div>
+
+<!-- END HEADER / NAVIGATION -->
+
+<!-- HERO / MAIN CONTENT -->
+
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+
+        <div id="search" class="content-title">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" 
+                 alt="Notebook with Search Engine Optimization visual sitting upon desk next to laptop and coffee" />
+
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for 
+                the right business as they travel, shop, or sit on their couch at home. 
+                Search Engine Optimization (SEO) allows you to increase your visibility 
+                and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+
+        <div id="reputation" class="content-title">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" 
+                 alt="Person with phone in hand using laptop with REPUTATION and charts displayed upon it" />
+
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social 
+                media allows anyone with an internet connection to say whatever they 
+                want about your business. Online Reputation Management gives you the 
+                control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+
+        <div id="social" class="content-title">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" 
+                alt="People collaboratively engaging at table with laptops and representative images of their goals" />
+
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. 
+                Social media marketing helps you determine which platforms are suited 
+                to your brand, using analytics to find the right markets and increase 
+                your lead generation.
             </p>
         </div>
     </div>
+
+<!-- END HERO / MAIN CONTENT -->
+
+<!-- BENEFITS SIDE BAR -->
+
     <div class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work for your 
+                business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+
+        <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing 
+                the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+
+        <div class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="" />
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising 
+                costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </div>
+
+<!-- END BENEFITS SIDE BAR-->
+
+<!-- FOOTER / COPYRIGHT -->
+
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+
+<!-- END FOOTER / COPYRIGHT -->
 </body>
 
 </html>
