--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,7 +34,10 @@
 
 <!-- HERO / MAIN CONTENT -->
 
-    <div class="hero"></div>
+    <div class="hero">
+        <img src="./assets/images/digital-marketing-meeting.jpg" 
+        alt="Young professionals engaging in a digital marketing meeting" /> 
+    </div>
     <div class="content">
 
         <div id="search" class="content-title">
@@ -115,10 +118,15 @@
 <!-- FOOTER / COPYRIGHT -->
 
     <div class="footer">
+        
+        <!--- MOCK UP SHOWED NO FOOTER, BUT I'M HESITANT TO REMOVE. COMMENTING OUT
+            
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
+    -->
+
     </div>
 
 <!-- END FOOTER / COPYRIGHT -->
